replaced inefficient constructors Character(char) by Character.valueOf(char)
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/math/branches/MATH_2_0@668117 13f79535-47bb-0310-9956-ffa450edef68